fix text-align for calendar

--- a/css/main.css
+++ b/css/main.css
@@ -1805,6 +1805,9 @@ ul.pager {
   margin: 0;
   padding: 0; }
 
+.view-calendar td {
+  text-align: left; }
+
 .view-calendar .date-heading h3 {
   text-align: left;
   font-size: 1.4em; }
