--- a/scss/components/_view-calendar.scss
+++ b/scss/components/_view-calendar.scss
@@ -24,6 +24,9 @@
 }
 
 // VIEW CALENDAR
+.view-calendar td {
+  text-align: left;
+}
 .view-calendar .date-heading h3 {
   text-align: left;
   font-size: 1.4em;
